iptables-save-rule.conf
# Generated by iptables-save v1.6.0 on Sun Dec 18 22:17:42 2016
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:MSSSYN - [0:0]
:MSSTTL - [0:0]
:TTLSYN - [0:0]
:TTLTCP - [0:0]
-A INPUT -i {your WAN} -p tcp -j TTLTCP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "tcp[0xC]&0xF0>0x50 && tcp[0x14:0x2]=0x0204" -m bpf --bytecode "15,48 0 0 0,84 0 0 240,21 0 11 64,48 0 0 9,21 0 9 6,40 0 0 6,69 7 0 8191,177 0 0 0,80 0 0 12,84 0 0 240,37 0 3 80,72 0 0 20,21 0 1 516,6 0 0 262144,6 0 0 0" -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i {your WAN} -p tcp -j TTLTCP
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 1,21 0 1 1,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x10000/0x10000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 2,21 0 1 2,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x20000/0x20000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 4,21 0 1 4,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x40000/0x40000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 8,21 0 1 8,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x80000/0x80000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 16,21 0 1 16,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x100000/0x100000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 32,21 0 1 32,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x200000/0x200000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 64,21 0 1 64,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x400000/0x400000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 128,21 0 1 128,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x800000/0x800000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 256,21 0 1 256,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x1000000/0x1000000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 512,21 0 1 512,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x2000000/0x2000000
-A MSSSYN -m bpf --bytecode "14,48 0 0 0,84 0 0 240,21 0 10 64,48 0 0 9,21 0 8 6,40 0 0 6,69 6 0 8191,177 0 0 0,72 0 0 22,4 0 0 40,84 0 0 1024,21 0 1 1024,6 0 0 262144,6 0 0 0" -j CONNMARK --set-xmark 0x4000000/0x4000000
-A MSSTTL -m u32 --u32 "0x0&0x1=0x1" -m connmark ! --mark 0x10000/0x10000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x2=0x2" -m connmark ! --mark 0x20000/0x20000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x4=0x4" -m connmark ! --mark 0x40000/0x40000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x8=0x8" -m connmark ! --mark 0x80000/0x80000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x10=0x10" -m connmark ! --mark 0x100000/0x100000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x20=0x20" -m connmark ! --mark 0x200000/0x200000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x40=0x40" -m connmark ! --mark 0x400000/0x400000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x80=0x80" -m connmark ! --mark 0x800000/0x800000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x100=0x100" -m connmark ! --mark 0x1000000/0x1000000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x200=0x200" -m connmark ! --mark 0x2000000/0x2000000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x400=0x400" -m connmark ! --mark 0x4000000/0x4000000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x1=0x0" -m connmark ! --mark 0x0/0x10000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x2=0x0" -m connmark ! --mark 0x0/0x20000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x4=0x0" -m connmark ! --mark 0x0/0x40000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x8=0x0" -m connmark ! --mark 0x0/0x80000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x10=0x0" -m connmark ! --mark 0x0/0x100000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x20=0x0" -m connmark ! --mark 0x0/0x200000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x40=0x0" -m connmark ! --mark 0x0/0x400000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x80=0x0" -m connmark ! --mark 0x0/0x800000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x100=0x0" -m connmark ! --mark 0x0/0x1000000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x200=0x0" -m connmark ! --mark 0x0/0x2000000 -j RETURN
-A MSSTTL -m u32 --u32 "0x0&0x400=0x0" -m connmark ! --mark 0x0/0x4000000 -j RETURN
-A MSSTTL -j TTLSYN
-A TTLSYN -j CONNMARK --set-xmark 0x0/0xff
-A TTLSYN -m u32 --u32 "0x5&0x1=0x1" -j CONNMARK --set-xmark 0x1/0x1
-A TTLSYN -m u32 --u32 "0x5&0x2=0x2" -j CONNMARK --set-xmark 0x2/0x2
-A TTLSYN -m u32 --u32 "0x5&0x4=0x4" -j CONNMARK --set-xmark 0x4/0x4
-A TTLSYN -m u32 --u32 "0x5&0x8=0x8" -j CONNMARK --set-xmark 0x8/0x8
-A TTLSYN -m u32 --u32 "0x5&0x10=0x10" -j CONNMARK --set-xmark 0x10/0x10
-A TTLSYN -m u32 --u32 "0x5&0x20=0x20" -j CONNMARK --set-xmark 0x20/0x20
-A TTLSYN -m u32 --u32 "0x5&0x40=0x40" -j CONNMARK --set-xmark 0x40/0x40
-A TTLSYN -m u32 --u32 "0x5&0x80=0x80" -j CONNMARK --set-xmark 0x80/0x80
-A TTLSYN -j MARK --set-xmark 0x1/0xff
-A TTLTCP -m connmark --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x12,0x14,0x4" -m comment --comment "ALL SYN,ACK|RST(ACK)" -j TTLSYN
-A TTLTCP -m connmark ! --mark 0x0/0xff -m bpf --bytecode "18,48 0 0 0,84 0 0 240,21 0 14 64,48 0 0 9,21 0 12 6,40 0 0 6,69 10 0 8191,177 0 0 0,80 0 0 12,84 0 0 240,37 0 6 80,80 0 0 13,7 0 0 8,0 0 0 39,92 0 0 0,21 0 1 0,6 0 0 262144,6 0 0 0" -m comment --comment "tcp[0xC]&0xF0>0x50 && (tcp-fin|tcp-syn|tcp-rst|tcp-urg)&tcp[tcpflags]=0x0" -j TTLSYN
-A TTLTCP -m connmark ! --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x12&&0x0>>0x16&0x3c@0x9>>0x2&0x3c=0x14:0x3c&&0x0>>0x16&0x3c@0x12&0xffff=0x204" -j MSSSYN
-A TTLTCP -m connmark ! --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x18,0x10" -j MSSTTL
COMMIT
# Completed on Sun Dec 18 22:17:42 2016
# Generated by iptables-save v1.6.0 on Sun Dec 18 22:17:42 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TTLDROP - [0:0]
:TTLTCP - [0:0]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i {your WAN} -p tcp -j TTLTCP
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -i {your WAN} -p tcp -j TTLTCP
-A FORWARD -o {your WAN} -p tcp -m connmark ! --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x11" -j CONNMARK --set-xmark 0x0/0xff
-A OUTPUT -o {your WAN} -p tcp -m connmark ! --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x11" -j CONNMARK --set-xmark 0x0/0xff
-A TTLDROP -m u32 --u32 "0x5&0x1=0x1" -m connmark ! --mark 0x1/0x1 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x2=0x2" -m connmark ! --mark 0x2/0x2 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x4=0x4" -m connmark ! --mark 0x4/0x4 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x8=0x8" -m connmark ! --mark 0x8/0x8 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x10=0x10" -m connmark ! --mark 0x10/0x10 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x20=0x20" -m connmark ! --mark 0x20/0x20 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x40=0x40" -m connmark ! --mark 0x40/0x40 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x80=0x80" -m connmark ! --mark 0x80/0x80 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x1=0x0" -m connmark ! --mark 0x0/0x1 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x2=0x0" -m connmark ! --mark 0x0/0x2 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x4=0x0" -m connmark ! --mark 0x0/0x4 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x8=0x0" -m connmark ! --mark 0x0/0x8 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x10=0x0" -m connmark ! --mark 0x0/0x10 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x20=0x0" -m connmark ! --mark 0x0/0x20 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x40=0x0" -m connmark ! --mark 0x0/0x40 -j DROP
-A TTLDROP -m u32 --u32 "0x5&0x80=0x0" -m connmark ! --mark 0x0/0x80 -j DROP
-A TTLTCP -m connmark ! --mark 0x0/0xff -m bpf --bytecode "29,48 0 0 0,84 0 0 240,21 0 25 64,48 0 0 9,21 0 23 6,40 0 0 6,69 21 0 8191,177 0 0 0,80 0 0 12,84 0 0 240,116 0 0 4,2 0 0 3,48 0 0 0,84 0 0 15,7 0 0 6,96 0 0 3,12 0 0 0,36 0 0 4,2 0 0 7,40 0 0 2,7 0 0 9,96 0 0 7,29 0 5 0,177 0 0 0,72 0 0 12,84 0 0 4087,21 0 1 16,6 0 0 262144,6 0 0 0" -m comment --comment "(((tcp[12] & 0xF0) >> 4) + (ip[0] & 0xF)) * 4 = ip[2:2] && (tcp-fin | tcp-syn | tcp-rst | tcp-urg) & tcp[tcpflags] = 0" -j RETURN
-A TTLTCP -m connmark ! --mark 0x0/0xff -m mark ! --mark 0x1/0x1 -j TTLDROP
-A TTLTCP -m connmark ! --mark 0x0/0xff -m u32 --u32 "0x0>>0x16&0x3c@0xa&0xfff=0x11" -j CONNMARK --set-xmark 0x0/0xff
COMMIT
# Completed on Sun Dec 18 22:17:42 2016
